<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.algol.NewAlgorithmActivity">

    <com.example.algol.TextViewHelvetica
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/editText_title"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.example.algol.TextViewHelvetica
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/editText_description"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:gravity="top"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_marginTop="10dp"
        android:background="@color/aquamarine"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:text="@string/suggest"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

</LinearLayout>
