<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:foo="http://schemas.android.com/apk/res-auto"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:background="@color/white"
             tools:context="com.example.algol.AnalysisFragment">

    <RelativeLayout
        android:paddingTop="10dp"
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.example.algol.TextViewHelvetica
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                foo:customFont="HelveticaLight.ttf"
                android:textSize="@dimen/analyses_complexity"
                android:text="O(" />

            <com.example.algol.TextViewHelvetica
                android:id="@+id/complexity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                foo:customFont="HelveticaLight.ttf"
                android:textSize="@dimen/analyses_complexity" />

            <com.example.algol.TextViewHelvetica
                android:id="@+id/complexity_pow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                foo:customFont="HelveticaLight.ttf"
                android:layout_marginTop="-15dp"
                android:layout_toRightOf="@id/complexity"
                android:textSize="@dimen/analyses_pow"/>

            <com.example.algol.TextViewHelvetica
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                foo:customFont="HelveticaLight.ttf"
                android:layout_toRightOf="@id/complexity_pow"
                android:textSize="@dimen/analyses_complexity"
                android:text=")" />

        </LinearLayout>

        <com.example.algol.TextViewHelvetica
            android:id="@+id/number_elements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            foo:customFont="HelveticaLight.ttf"
            android:layout_below="@id/linear_layout"
            android:textSize="@dimen/analyses_text_view"
            android:text="@string/number_elements" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/seekbar_number_elements"
            android:layout_marginTop="@dimen/analyses_margin_elements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dsb_min="1"
            app:dsb_max="1000"
            app:dsb_value="250"
            android:layout_below="@id/number_elements"/>

        <com.example.algol.TextViewHelvetica
            android:id="@+id/maximum_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            foo:customFont="HelveticaLight.ttf"
            android:textSize="@dimen/analyses_text_view"
            android:text="@string/maximum_element"
            android:layout_below="@id/seekbar_number_elements"
            android:layout_marginTop="@dimen/analyses_margin_elements"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/seekbar_maximum_element"
            android:layout_marginTop="@dimen/analyses_margin_elements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dsb_min="1"
            app:dsb_max="1000"
            app:dsb_value="750"
            android:layout_below="@id/maximum_element"/>

        <com.example.algol.TextViewHelvetica
            android:id="@+id/is_sorted"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            foo:customFont="HelveticaLight.ttf"
            android:textSize="@dimen/analyses_text_view"
            android:layout_below="@id/seekbar_maximum_element"
            android:text="@string/is_sorted" />

        <ToggleButton
            android:id="@+id/toggle_is_sorted"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="-7dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/toggle_switch"
            android:layout_alignTop="@id/is_sorted"
            android:shadowRadius="0"
            android:shadowColor="@color/white"
            android:textOff=""
            android:textOn="" />

        <com.example.algol.TextViewHelvetica
            android:id="@+id/reverse_order"
            android:layout_marginTop="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            foo:customFont="HelveticaLight.ttf"
            android:textSize="@dimen/analyses_text_view"
            android:layout_below="@id/is_sorted"
            android:text="@string/is_sorted" />

        <ToggleButton
            android:id="@+id/toggle_reverse_order"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="-7dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/toggle_switch"
            android:layout_alignTop="@id/reverse_order"
            android:shadowRadius="0"
            android:shadowColor="@color/white"
            android:textOff=""
            android:textOn="" />

        <com.example.algol.TextViewHelvetica
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time 00:00:000"
            android:textColor="@color/black"
            android:textSize="@dimen/analyses_time"
            android:layout_marginBottom="20dp"
            foo:customFont="HelveticaLight.ttf"
            android:layout_above="@+id/start_button"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/aquamarine"
            android:textColor="@color/white"
            android:text="@string/start_button" />

    </RelativeLayout>

</FrameLayout>
